--- a/UI.MVC/Views/Home/About.cshtml
+++ b/UI.MVC/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<a href="http://fnalin.azurewebsites.net" target="_blank">fnalin.azurewebsites.net</a>
