--- a/UI.MVC/Views/Shared/_Contato.cshtml
+++ b/UI.MVC/Views/Shared/_Contato.cshtml
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-success" type="submit">Enviar</button>
+                    <button class="btn btn-success" type="submit">Salvar Contato</button>
                 </div>
             </div><!-- /.modal-content -->
         }
